// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API contract: src/index.ts > runtime exports match the locked snapshot 1`] = `
[
  "ABILITY_SCORES",
  "ABILITY_SCORE_MAX",
  "ABILITY_SCORE_MIN",
  "ATTITUDES",
  "AbilityCheckRolledEventSchema",
  "AbilityScoreSchema",
  "AbilityScoreValueSchema",
  "AbilityScoresSchema",
  "AlignmentSchema",
  "AppliedConditionSchema",
  "ArmorSchema",
  "AttackAdvantageSchema",
  "AttackRolledEventSchema",
  "AttitudeChangedEventSchema",
  "AttitudeSchema",
  "BASTION_TURN_ORDERS",
  "BackgroundSchema",
  "BastionDamagedEventSchema",
  "BastionFacilityAddedEventSchema",
  "BastionFoundedEventSchema",
  "BastionHirelingAddedEventSchema",
  "BastionLevelChangedEventSchema",
  "BastionTurnOrderSchema",
  "BastionTurnTakenEventSchema",
  "CHARACTER_LEVEL_MAX",
  "CHARACTER_LEVEL_MIN",
  "CREATURE_TYPES",
  "CURRENCY_DENOMINATIONS",
  "CURRENCY_KEYS",
  "CampaignSettingsChangedEventSchema",
  "CampaignSettingsSchema",
  "CampaignStateSchema",
  "CharacterCreatedEventSchema",
  "CharacterLevelSchema",
  "CharacterLocationChangedEventSchema",
  "CharacterResurrectedEventSchema",
  "CharacterSchema",
  "CheckAdvantageSchema",
  "ChoiceOptionSchema",
  "ChoiceRequiredEventSchema",
  "ChoiceResolvedEventSchema",
  "ClassEnrollmentSchema",
  "ClassFeatureSchema",
  "ClassSchema",
  "CombatantSchema",
  "CompanionDismissedEventSchema",
  "CompanionSummonedEventSchema",
  "ConditionAppliedEventSchema",
  "ConditionRemovedEventSchema",
  "ConditionSchema",
  "ConsumableSchema",
  "ContentPackLoadError",
  "ContentPackSchema",
  "CreatureTypeSchema",
  "CurrencySchema",
  "DAMAGE_TYPES",
  "DEFAULT_CELL_SIZE_FEET",
  "DIFFICULT_MOVEMENT_COST",
  "DOOR_STATES",
  "DOWNTIME_KINDS",
  "DOWNTIME_OUTCOMES",
  "DamageAppliedEventSchema",
  "DamageRollSchema",
  "DamageRolledEventSchema",
  "DamageTypeSchema",
  "DeathSaveRolledEventSchema",
  "DeathSavesSchema",
  "DefaultRNG",
  "DiceExpressionSchema",
  "DismountedEventSchema",
  "DoorAddedEventSchema",
  "DoorSchema",
  "DoorStateChangedEventSchema",
  "DoorStateSchema",
  "DowntimeActivityResolvedEventSchema",
  "DowntimeKindSchema",
  "DowntimeOutcomeSchema",
  "EFFECT_KINDS",
  "EVENT_TYPES",
  "EXHAUSTION_MAX",
  "EXHAUSTION_MIN",
  "EffectAccumulator",
  "EffectSchema",
  "EncounterCreatedEventSchema",
  "EncounterEndedEventSchema",
  "EncounterSchema",
  "EncounterStartedEventSchema",
  "EncounterStatusSchema",
  "EventEnvelopeSchema",
  "EventSchema",
  "ExhaustionChangedEventSchema",
  "ExhaustionLevelSchema",
  "FeatSchema",
  "ForagedForEventSchema",
  "FormulaSchema",
  "GearSchema",
  "HPSchema",
  "HPStrategySchema",
  "HealedEventSchema",
  "HitDieSchema",
  "HitDieSpentEventSchema",
  "InGameTimeSchema",
  "InitiativeRollSchema",
  "InitiativeRolledEventSchema",
  "ItemAcquiredEventSchema",
  "ItemChargeConsumedEventSchema",
  "ItemDefinitionSchema",
  "ItemIdentifiedEventSchema",
  "ItemInstanceSchema",
  "ItemRechargedEventSchema",
  "JOURNAL_AUTHOR_KINDS",
  "JOURNAL_VISIBILITIES",
  "JournalAuthorKindSchema",
  "JournalEntrySchema",
  "JournalVisibilitySchema",
  "LevelUpResolvedEventSchema",
  "LocationCreatedEventSchema",
  "LocationMapSchema",
  "LocationSchema",
  "LongRestEndedEventSchema",
  "LongRestStartedEventSchema",
  "MILESTONE_KINDS",
  "MagicItemSchema",
  "MilestoneAwardedEventSchema",
  "MilestoneKindSchema",
  "ModifierTargetSchema",
  "MonsterStatblockSchema",
  "MoraleBrokenEventSchema",
  "MoraleCheckRolledEventSchema",
  "MountedEventSchema",
  "MovementModeSchema",
  "NORMAL_MOVEMENT_COST",
  "NavigationCheckRolledEventSchema",
  "OBJECTIVE_STATUSES",
  "ObjectiveCompletedEventSchema",
  "ObjectiveFailedEventSchema",
  "ObjectiveProgressedEventSchema",
  "ObjectiveStatusSchema",
  "POLYMORPH_KINDS",
  "PROFICIENCY_MULTIPLIER",
  "PartySchema",
  "PendingChoiceSchema",
  "PolymorphAppliedEventSchema",
  "PolymorphFormSchema",
  "PolymorphKindSchema",
  "PolymorphRevertedEventSchema",
  "PredicateSchema",
  "ProficiencyLevelSchema",
  "QUEST_STATUSES",
  "QuestAbandonedEventSchema",
  "QuestCompletedEventSchema",
  "QuestFailedEventSchema",
  "QuestObjectiveSchema",
  "QuestRewardClaimedEventSchema",
  "QuestRewardSchema",
  "QuestSchema",
  "QuestStartedEventSchema",
  "QuestStatusSchema",
  "RECHARGE_CADENCES",
  "RESURRECTION_SPELLS",
  "RESURRECTION_VIAS",
  "RechargeCadenceSchema",
  "RechargeSchema",
  "ResourceRestoredEventSchema",
  "ResourceSpentEventSchema",
  "ResourceStateSchema",
  "ResurrectionSpellSchema",
  "ResurrectionViaSchema",
  "RollTargetSchema",
  "RoundEndedEventSchema",
  "SCHEMA_VERSION",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_LEVEL_MAX",
  "SPELL_LEVEL_MIN",
  "STARTER_PACK_RAW",
  "SaveRolledEventSchema",
  "SeededRNG",
  "SenseSchema",
  "SensesSchema",
  "SentientItemConflictEventSchema",
  "SessionSchema",
  "ShortRestEndedEventSchema",
  "ShortRestStartedEventSchema",
  "SimulacrumCreatedEventSchema",
  "SizeSchema",
  "SkillSchema",
  "SpeciesSchema",
  "SpeedSchema",
  "SpellCounteredEventSchema",
  "SpellDispelledEventSchema",
  "SpellLevelSchema",
  "SpellSchema",
  "SpellSchoolSchema",
  "SpellcastingProgressionSchema",
  "StabilizedEventSchema",
  "SubclassSchema",
  "TERRAIN_KINDS",
  "TRAP_EXPIRY_REASONS",
  "TempHPGrantedEventSchema",
  "TerrainKindSchema",
  "ThrowOnCallRNG",
  "ToolSchema",
  "TrapArmedEventSchema",
  "TrapExpiredEventSchema",
  "TrapExpiryReasonSchema",
  "TrapTriggeredEventSchema",
  "TravelLegCompletedEventSchema",
  "TurnEndedEventSchema",
  "TurnStartedEventSchema",
  "ULIDSchema",
  "VEHICLE_KINDS",
  "VehicleAcquiredEventSchema",
  "VehicleBoardedEventSchema",
  "VehicleDamagedEventSchema",
  "VehicleDepartedEventSchema",
  "VehicleKindSchema",
  "VehicleRepairedEventSchema",
  "VehicleSchema",
  "WEAPON_MASTERIES",
  "WEAPON_PROPERTIES",
  "WeaponMasteryActivatedEventSchema",
  "WeaponMasterySchema",
  "WeaponPropertySchema",
  "WeaponSchema",
  "WishGrantedEventSchema",
  "XPAwardedEventSchema",
  "abilityModifier",
  "addCurrency",
  "advanceInGameTime",
  "apply",
  "applyAll",
  "asBackgroundId",
  "asCharacterId",
  "asClassFeatureId",
  "asClassId",
  "asConditionId",
  "asContentPackId",
  "asCreatureId",
  "asFeatId",
  "asHandlerId",
  "asItemDefinitionId",
  "asItemInstanceId",
  "asMonsterStatblockId",
  "asResourceId",
  "asSpeciesId",
  "asSpellId",
  "asSubclassId",
  "breakdownInGameTime",
  "buildEffectStack",
  "chebyshevDistanceFeet",
  "commit",
  "computeAC",
  "computeAbilityCheck",
  "computeAttackBonus",
  "computeDerivedCharacter",
  "computeKnownLanguages",
  "computePassiveScore",
  "computeSavingThrow",
  "computeSpellAttackBonus",
  "computeSpellSaveDC",
  "computeSpellSlots",
  "computeTotalLevel",
  "createEngine",
  "createPC",
  "defaultCampaignSettings",
  "defaultRNG",
  "emptyCampaignState",
  "emptyCurrency",
  "evaluateFormula",
  "evaluatePredicate",
  "formatInGameTime",
  "hasLineOfEffect",
  "hasLineOfSight",
  "isFormula",
  "isInRangeFeet",
  "isPredicate",
  "loadCampaign",
  "loadContentPack",
  "loadStarterPack",
  "migrate",
  "movementCostAt",
  "movementCostFor",
  "newAppliedConditionId",
  "newCampaignId",
  "newCharacterId",
  "newChoiceId",
  "newCreatureId",
  "newEffectInstanceId",
  "newEncounterId",
  "newEventId",
  "newItemInstanceId",
  "newJournalEntryId",
  "newLocationId",
  "newPartyId",
  "newQuestId",
  "newSessionId",
  "parseDiceExpression",
  "performIntent",
  "planAbilityCheck",
  "planAdvanceTurn",
  "planAttack",
  "planBeginFirstTurn",
  "planCounterspell",
  "planCreateEncounter",
  "planDispelMagic",
  "planEndEncounter",
  "planForage",
  "planGrapple",
  "planHide",
  "planIdentify",
  "planLevelUp",
  "planLongRest",
  "planMoraleCheck",
  "planNavigationCheck",
  "planOpportunityAttack",
  "planReactionRoll",
  "planResolveChoice",
  "planRollInitiative",
  "planSave",
  "planShortRest",
  "planShove",
  "planStartEncounter",
  "planWeaponMastery",
  "proficiencyBonus",
  "redo",
  "replay",
  "resolveContent",
  "rollDice",
  "rollDie",
  "rollExpression",
  "seededRNG",
  "serializeCampaign",
  "spellSlotsForLevel",
  "subtractCurrency",
  "terrainAt",
  "throwOnCallRNG",
  "totalInCopper",
  "undo",
  "validateCrossReferences",
]
`;

exports[`public API contract: src/index.ts > source-level exports (runtime + type-only) match the locked snapshot 1`] = `
[
  "ABILITY_SCORES",
  "ABILITY_SCORE_MAX",
  "ABILITY_SCORE_MIN",
  "ACResult",
  "ATTITUDES",
  "AbilityCheckIntent",
  "AbilityCheckResult",
  "AbilityCheckRolledEventSchema",
  "AbilityScoreSchema",
  "AbilityScoreValueSchema",
  "AbilityScoresSchema",
  "AdvanceTurnIntent",
  "AlignmentSchema",
  "AppliedConditionId",
  "AppliedConditionSchema",
  "ArmorSchema",
  "AttackAdvantageSchema",
  "AttackIntent",
  "AttackResult",
  "AttackRolledEventSchema",
  "Attitude",
  "AttitudeChangedEvent",
  "AttitudeChangedEventSchema",
  "AttitudeSchema",
  "BASTION_TURN_ORDERS",
  "BackgroundId",
  "BackgroundSchema",
  "BastionDamagedEvent",
  "BastionDamagedEventSchema",
  "BastionFacilityAddedEvent",
  "BastionFacilityAddedEventSchema",
  "BastionFoundedEvent",
  "BastionFoundedEventSchema",
  "BastionHirelingAddedEvent",
  "BastionHirelingAddedEventSchema",
  "BastionLevelChangedEvent",
  "BastionLevelChangedEventSchema",
  "BastionTurnOrder",
  "BastionTurnOrderSchema",
  "BastionTurnTakenEvent",
  "BastionTurnTakenEventSchema",
  "BeginFirstTurnIntent",
  "CHARACTER_LEVEL_MAX",
  "CHARACTER_LEVEL_MIN",
  "CREATURE_TYPES",
  "CURRENCY_DENOMINATIONS",
  "CURRENCY_KEYS",
  "Campaign",
  "CampaignId",
  "CampaignInit",
  "CampaignSettings",
  "CampaignSettingsChangedEvent",
  "CampaignSettingsChangedEventSchema",
  "CampaignSettingsSchema",
  "CampaignStateSchema",
  "CastSpellIntent",
  "CasterChoice",
  "CharacterCreatedEventSchema",
  "CharacterId",
  "CharacterLevelSchema",
  "CharacterLocationChangedEvent",
  "CharacterLocationChangedEventSchema",
  "CharacterResurrectedEvent",
  "CharacterResurrectedEventSchema",
  "CharacterSchema",
  "CheckAdvantageSchema",
  "CheckConcentrationIntent",
  "ChoiceId",
  "ChoiceOptionSchema",
  "ChoiceRequiredEventSchema",
  "ChoiceResolvedEventSchema",
  "ClassEnrollmentSchema",
  "ClassFeatureId",
  "ClassFeatureSchema",
  "ClassId",
  "ClassSchema",
  "CleaveIntent",
  "CombatantId",
  "CombatantSchema",
  "CompanionDismissedEvent",
  "CompanionDismissedEventSchema",
  "CompanionSummonedEvent",
  "CompanionSummonedEventSchema",
  "ConditionAppliedEventSchema",
  "ConditionId",
  "ConditionRemovedEventSchema",
  "ConditionSchema",
  "ConsumableSchema",
  "ConsumeGuidanceIntent",
  "ConsumeGuidanceOutcome",
  "ContentPack",
  "ContentPackId",
  "ContentPackLoadError",
  "ContentPackSchema",
  "ContentValidationIssue",
  "CounterspellIntent",
  "CreateEncounterIntent",
  "CreateEngineOptions",
  "CreatePCOptions",
  "CreatureId",
  "CreatureTypeSchema",
  "Currency",
  "CurrencyDenomination",
  "CurrencySchema",
  "DAMAGE_TYPES",
  "DEFAULT_CELL_SIZE_FEET",
  "DIFFICULT_MOVEMENT_COST",
  "DOOR_STATES",
  "DOWNTIME_KINDS",
  "DOWNTIME_OUTCOMES",
  "DamageAppliedEventSchema",
  "DamageRollSchema",
  "DamageRolledEventSchema",
  "DamageTypeSchema",
  "DashIntent",
  "DeathSaveRolledEventSchema",
  "DeathSavesSchema",
  "DefaultRNG",
  "DerivedCharacter",
  "DiceExpressionSchema",
  "DiceRollResult",
  "DieRoll",
  "DisengageIntent",
  "DismissCompanionIntent",
  "DismountedEvent",
  "DismountedEventSchema",
  "DispelMagicIntent",
  "Door",
  "DoorAddedEvent",
  "DoorAddedEventSchema",
  "DoorSchema",
  "DoorState",
  "DoorStateChangedEvent",
  "DoorStateChangedEventSchema",
  "DoorStateSchema",
  "DowntimeActivityResolvedEvent",
  "DowntimeActivityResolvedEventSchema",
  "DowntimeKind",
  "DowntimeKindSchema",
  "DowntimeOutcome",
  "DowntimeOutcomeSchema",
  "EFFECT_KINDS",
  "EVENT_TYPES",
  "EXHAUSTION_MAX",
  "EXHAUSTION_MIN",
  "EffectAccumulator",
  "EffectHandler",
  "EffectInstanceId",
  "EffectSchema",
  "EncounterCreatedEventSchema",
  "EncounterEndedEventSchema",
  "EncounterId",
  "EncounterSchema",
  "EncounterStartedEventSchema",
  "EncounterStatusSchema",
  "EndEncounterIntent",
  "Engine",
  "EventEnvelopeSchema",
  "EventId",
  "EventSchema",
  "ExhaustionChangedEventSchema",
  "ExhaustionLevelSchema",
  "ExpireSpellDurationsIntent",
  "FeatId",
  "FeatSchema",
  "ForageIntent",
  "ForagedForEvent",
  "ForagedForEventSchema",
  "ForcedMarchIntent",
  "FormulaContext",
  "FormulaSchema",
  "GearSchema",
  "GrantInitialHeroPointsIntent",
  "GrappleIntent",
  "HPSchema",
  "HPStrategySchema",
  "HandlerContext",
  "HandlerId",
  "HandlerRegistry",
  "HealedEventSchema",
  "HideIntent",
  "HitDieSchema",
  "HitDieSpentEventSchema",
  "IdentifyIntent",
  "InGameClockBreakdown",
  "InGameTime",
  "InGameTimeSchema",
  "InitiativeRollSchema",
  "InitiativeRolledEventSchema",
  "ItemAcquiredEventSchema",
  "ItemChargeConsumedEvent",
  "ItemChargeConsumedEventSchema",
  "ItemDefinitionId",
  "ItemDefinitionSchema",
  "ItemIdentifiedEvent",
  "ItemIdentifiedEventSchema",
  "ItemInstanceId",
  "ItemInstanceSchema",
  "ItemRechargedEvent",
  "ItemRechargedEventSchema",
  "JOURNAL_AUTHOR_KINDS",
  "JOURNAL_VISIBILITIES",
  "JournalAuthorKind",
  "JournalAuthorKindSchema",
  "JournalEntry",
  "JournalEntryId",
  "JournalEntrySchema",
  "JournalVisibility",
  "JournalVisibilitySchema",
  "LevelUpIntent",
  "LevelUpResolvedEventSchema",
  "Location",
  "LocationCreatedEvent",
  "LocationCreatedEventSchema",
  "LocationId",
  "LocationMap",
  "LocationMapSchema",
  "LocationSchema",
  "LongRestEndedEventSchema",
  "LongRestIntent",
  "LongRestStartedEventSchema",
  "MILESTONE_KINDS",
  "MagicItemSchema",
  "MilestoneAwardedEvent",
  "MilestoneAwardedEventSchema",
  "MilestoneKind",
  "MilestoneKindSchema",
  "MistyStepIntent",
  "ModifierTargetSchema",
  "MonsterStatblockId",
  "MonsterStatblockSchema",
  "MoraleBrokenEvent",
  "MoraleBrokenEventSchema",
  "MoraleCheckIntent",
  "MoraleCheckRolledEvent",
  "MoraleCheckRolledEventSchema",
  "MountedEvent",
  "MountedEventSchema",
  "MoveIntent",
  "MovementModeSchema",
  "NORMAL_MOVEMENT_COST",
  "NavigationCheckIntent",
  "NavigationCheckRolledEvent",
  "NavigationCheckRolledEventSchema",
  "OBJECTIVE_STATUSES",
  "ObjectiveCompletedEvent",
  "ObjectiveCompletedEventSchema",
  "ObjectiveFailedEvent",
  "ObjectiveFailedEventSchema",
  "ObjectiveProgressedEvent",
  "ObjectiveProgressedEventSchema",
  "ObjectiveStatus",
  "ObjectiveStatusSchema",
  "OpportunityAttackIntent",
  "POLYMORPH_KINDS",
  "PROFICIENCY_MULTIPLIER",
  "Party",
  "PartyId",
  "PartySchema",
  "PendingChoiceSchema",
  "PlanResult",
  "PolymorphAppliedEvent",
  "PolymorphAppliedEventSchema",
  "PolymorphForm",
  "PolymorphFormSchema",
  "PolymorphIntent",
  "PolymorphKind",
  "PolymorphKindSchema",
  "PolymorphOutcome",
  "PolymorphRevertedEvent",
  "PolymorphRevertedEventSchema",
  "PredicateContext",
  "PredicateSchema",
  "ProficiencyLevelSchema",
  "QUEST_STATUSES",
  "Quest",
  "QuestAbandonedEvent",
  "QuestAbandonedEventSchema",
  "QuestCompletedEvent",
  "QuestCompletedEventSchema",
  "QuestFailedEvent",
  "QuestFailedEventSchema",
  "QuestId",
  "QuestObjective",
  "QuestObjectiveSchema",
  "QuestReward",
  "QuestRewardClaimedEvent",
  "QuestRewardClaimedEventSchema",
  "QuestRewardSchema",
  "QuestSchema",
  "QuestStartedEvent",
  "QuestStartedEventSchema",
  "QuestStatus",
  "QuestStatusSchema",
  "RECHARGE_CADENCES",
  "RESURRECTION_SPELLS",
  "RESURRECTION_VIAS",
  "RNG",
  "ReactionRollIntent",
  "RechargeCadence",
  "RechargeCadenceSchema",
  "RechargeSchema",
  "ResolveChoiceIntent",
  "ResolvedContent",
  "ResourceId",
  "ResourceRestoredEventSchema",
  "ResourceSpentEventSchema",
  "ResourceStateSchema",
  "RestIntent",
  "ResurrectIntent",
  "ResurrectVia",
  "ResurrectionSpell",
  "ResurrectionSpellSchema",
  "ResurrectionVia",
  "ResurrectionViaSchema",
  "RollInitiativeIntent",
  "RollTargetSchema",
  "RoundEndedEventSchema",
  "SCHEMA_VERSION",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_LEVEL_MAX",
  "SPELL_LEVEL_MIN",
  "STARTER_PACK_RAW",
  "SaveIntent",
  "SaveResult",
  "SaveRolledEventSchema",
  "SchemaVersion",
  "SeededRNG",
  "SenseSchema",
  "SensesSchema",
  "SentientItemConflictEvent",
  "SentientItemConflictEventSchema",
  "SerializedCampaign",
  "Session",
  "SessionId",
  "SessionSchema",
  "ShieldIntent",
  "ShieldOutcome",
  "ShortRestEndedEventSchema",
  "ShortRestIntent",
  "ShortRestStartedEventSchema",
  "ShoveIntent",
  "SimulacrumCreatedEvent",
  "SimulacrumCreatedEventSchema",
  "SimulacrumIntent",
  "SimulacrumOutcome",
  "SizeSchema",
  "SkillSchema",
  "SpeciesId",
  "SpeciesSchema",
  "SpeedSchema",
  "SpellCounteredEvent",
  "SpellCounteredEventSchema",
  "SpellDCResult",
  "SpellDispelledEvent",
  "SpellDispelledEventSchema",
  "SpellId",
  "SpellLevelSchema",
  "SpellSchema",
  "SpellSchoolSchema",
  "SpellSlotsResult",
  "SpellcastingProgressionSchema",
  "SpendHeroPointIntent",
  "SpendHeroPointOutcome",
  "StabilizedEventSchema",
  "StartEncounterIntent",
  "SubclassId",
  "SubclassSchema",
  "TERRAIN_KINDS",
  "TRAP_EXPIRY_REASONS",
  "TempHPGrantedEventSchema",
  "TerrainKind",
  "TerrainKindSchema",
  "ThrowOnCallRNG",
  "TickAuraIntent",
  "ToolSchema",
  "TrapArmedEvent",
  "TrapArmedEventSchema",
  "TrapExpiredEvent",
  "TrapExpiredEventSchema",
  "TrapExpiryReason",
  "TrapExpiryReasonSchema",
  "TrapTriggeredEvent",
  "TrapTriggeredEventSchema",
  "TravelLegCompletedEvent",
  "TravelLegCompletedEventSchema",
  "TriggerTrapIntent",
  "TurnEndedEventSchema",
  "TurnStartedEventSchema",
  "ULIDSchema",
  "VEHICLE_KINDS",
  "Vehicle",
  "VehicleAcquiredEvent",
  "VehicleAcquiredEventSchema",
  "VehicleBoardedEvent",
  "VehicleBoardedEventSchema",
  "VehicleDamagedEvent",
  "VehicleDamagedEventSchema",
  "VehicleDepartedEvent",
  "VehicleDepartedEventSchema",
  "VehicleKind",
  "VehicleKindSchema",
  "VehicleRepairedEvent",
  "VehicleRepairedEventSchema",
  "VehicleSchema",
  "WEAPON_MASTERIES",
  "WEAPON_PROPERTIES",
  "WeaponMasteryActivatedEvent",
  "WeaponMasteryActivatedEventSchema",
  "WeaponMasteryIntent",
  "WeaponMasterySchema",
  "WeaponPropertySchema",
  "WeaponSchema",
  "WildShapeIntent",
  "WishGrantedEvent",
  "WishGrantedEventSchema",
  "WishIntent",
  "WishOutcome",
  "XPAwardedEvent",
  "XPAwardedEventSchema",
  "abilityModifier",
  "addCurrency",
  "advanceInGameTime",
  "apply",
  "applyAll",
  "asBackgroundId",
  "asCharacterId",
  "asClassFeatureId",
  "asClassId",
  "asConditionId",
  "asContentPackId",
  "asCreatureId",
  "asFeatId",
  "asHandlerId",
  "asItemDefinitionId",
  "asItemInstanceId",
  "asMonsterStatblockId",
  "asResourceId",
  "asSpeciesId",
  "asSpellId",
  "asSubclassId",
  "breakdownInGameTime",
  "buildEffectStack",
  "chebyshevDistanceFeet",
  "commit",
  "computeAC",
  "computeAbilityCheck",
  "computeAttackBonus",
  "computeDerivedCharacter",
  "computeKnownLanguages",
  "computePassiveScore",
  "computeSavingThrow",
  "computeSpellAttackBonus",
  "computeSpellSaveDC",
  "computeSpellSlots",
  "computeTotalLevel",
  "createEngine",
  "createPC",
  "defaultCampaignSettings",
  "defaultRNG",
  "emptyCampaignState",
  "emptyCurrency",
  "evaluateFormula",
  "evaluatePredicate",
  "formatInGameTime",
  "hasLineOfEffect",
  "hasLineOfSight",
  "isFormula",
  "isInRangeFeet",
  "isPredicate",
  "loadCampaign",
  "loadContentPack",
  "loadStarterPack",
  "migrate",
  "movementCostAt",
  "movementCostFor",
  "newAppliedConditionId",
  "newCampaignId",
  "newCharacterId",
  "newChoiceId",
  "newCreatureId",
  "newEffectInstanceId",
  "newEncounterId",
  "newEventId",
  "newItemInstanceId",
  "newJournalEntryId",
  "newLocationId",
  "newPartyId",
  "newQuestId",
  "newSessionId",
  "parseDiceExpression",
  "performIntent",
  "planAbilityCheck",
  "planAdvanceTurn",
  "planAttack",
  "planBeginFirstTurn",
  "planCounterspell",
  "planCreateEncounter",
  "planDispelMagic",
  "planEndEncounter",
  "planForage",
  "planGrapple",
  "planHide",
  "planIdentify",
  "planLevelUp",
  "planLongRest",
  "planMoraleCheck",
  "planNavigationCheck",
  "planOpportunityAttack",
  "planReactionRoll",
  "planResolveChoice",
  "planRollInitiative",
  "planSave",
  "planShortRest",
  "planShove",
  "planStartEncounter",
  "planWeaponMastery",
  "proficiencyBonus",
  "redo",
  "replay",
  "resolveContent",
  "rollDice",
  "rollDie",
  "rollExpression",
  "seededRNG",
  "serializeCampaign",
  "spellSlotsForLevel",
  "subtractCurrency",
  "terrainAt",
  "throwOnCallRNG",
  "totalInCopper",
  "undo",
  "validateCrossReferences",
]
`;
